force-app/sfpegSharingGroupUtility/objects/sfpegTestStructure__c/sfpegTestStructure__c.object-meta.xml
<CustomObject>
    <description>Test object for the sfpegSharingGroupUtility test classes (PEG_APEX package)</description>
    <label>sfpegTestStructure</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sfpegTestStructures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>