force-app/sfpegSharingGroupUtility/objects/sfpegTestStructure__c/fields/doGroupEval__c.field-meta.xml
<CustomField>
    <fullName>doGroupEval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to trigger group evaluation</description>
    <label>doGroupEval</label>
    <type>Checkbox</type>
</CustomField>