force-app/sfpegSharingGroupUtility/objects/sfpegTestStructure__c/fields/KoGroupDetails__c.field-meta.xml
<CustomField>
    <fullName>KoGroupDetails__c</fullName>
    <description>DLast Group Control Details</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Last Group Control Details</inlineHelpText>
    <label>Problèmes groupes</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>