force-app/sfpegSharingGroupUtility/objects/sfpegTestStructure__c/fields/LastGroupControlTS__c.field-meta.xml
<CustomField>
    <fullName>LastGroupControlTS__c</fullName>
    <description>last group control Timestamp</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LastGroupControlTS</label>
    <type>DateTime</type>
</CustomField>