force-app/sfpegSharingGroupUtility/objects/sfpegTestStructure__c/fields/lastGroupEvalTS__c.field-meta.xml
<CustomField>
    <fullName>lastGroupEvalTS__c</fullName>
    <description>last group evaluation Timestamp</description>
    <encryptionScheme>None</encryptionScheme>
    <label>lastGroupEvalTS</label>
    <type>DateTime</type>
</CustomField>