force-app/sfpegSharingGroupUtility/objects/sfpegTestStructure__c/fields/localGroupId__c.field-meta.xml
<CustomField>
    <fullName>localGroupId__c</fullName>
    <description>ID of the local group</description>
    <encryptionScheme>None</encryptionScheme>
    <label>localGroupId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>