force-app/sfpegSharingGroupUtility/objects/sfpegTestStructure__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Structure in the hierarchy</description>
    <label>Parent</label>
    <referenceTo>sfpegTestStructure__c</referenceTo>
    <relationshipLabel>Children</relationshipLabel>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>